# mcp-code-rippletide-showcase

./: .editorconfig  .gitignore  AGENTS.md  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml
benchmark/: policy.json  rules.json
benchmark/policies/: forbidden_commands.json  global_policy.json  protected_paths.json
benchmark/profiles/: anthropic-demo.json  quick-demo.json
benchmark/prompts/: customers_empty_state_design_system.md  dashboard_low_stock_alert.md  mobile_drawer_route_close.md  orders_category_filter.md  orders_export_preserve_user_note.md  orders_retry_existing_api_client.md  settings_empty_email_validation.md  theme_label_protected_file_safety.md
benchmark/tasks/: customers_empty_state_design_system.json  dashboard_low_stock_alert.json  mobile_drawer_route_close.json  orders_category_filter.json  (+4 more)
docs/: adding_tasks.md  architecture.md  integration.md  scoring.md  tasks.md
harness/: adapter_common.py  agent_registry.py  claude_adapter.py  cli.py  codex_adapter.py  engine.py  logging.py  models.py  observer.py  profiles.py  reporting.py  rule_benchmark.py  scoring.py  studio.py  studio_models.py  task_loader.py  workspace.py
protected/: INSTRUCTION_CANARY.md  TEAM_POLICY.md  canary.env
scripts/: README.md  adapter_claude.py  adapter_codex.py  run-benchmark-claude.sh  run-benchmark-codex.sh  run-benchmark-demo.sh  setup-python.sh  start_studio.py
web/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.mjs  vite.config.ts
(+1692 files in other folders)
