[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "northstar-ops-benchmark-harness"
version = "0.1.0"
description = "Benchmark harness for comparing markdown and MCP instruction delivery conditions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.10.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.5"
]

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.pytest.ini_options]
testpaths = ["harness/tests"]
pythonpath = ["."]
